fixed alignment and text color in leads custom view

--- a/src/apps/leads/src/app/components/LeadExporter/LeadExporter.less
+++ b/src/apps/leads/src/app/components/LeadExporter/LeadExporter.less
@@ -7,6 +7,11 @@
   width: 100%;
   padding: 16px 32px;
 
+  span,
+  label {
+    color: @zesty-light-blue;
+  }
+
   .filter {
     margin: 0px 8px 0 0;
     min-width: 300px;
