--- a/src/apps/leads/src/app/components/LeadExporter/TableDateFilter/TableDateFilter.less
+++ b/src/apps/leads/src/app/components/LeadExporter/TableDateFilter/TableDateFilter.less
@@ -1,5 +1,9 @@
+@import "~@zesty-io/core/colors.less";
+@import "~@zesty-io/core/typography.less";
+
 .customDate label {
-  margin-right: 8px;
+  // margin-right: 8px;
+  color: @zesty-light-blue;
 }
 
 .customDate + .customDate {
